--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,6 +8,20 @@
 	</head>
 
 	<body>
+		<input id="origin-input" class="controls" type="text" placeholder="Enter origin location">
+		<input id="destination-input" class="controls" type="text" placeholder="Enter destination location">
+
+		<div id="mode-selector" class="controls">
+			<input type="radio" name="type" id="changemode-walking" checked="checked">
+			<label for="changemode-walking">Walking</label>
+
+			<input type="radio" name="type" id="changemode-transit">
+			<label for="changemode-transit">Transit</label>
+
+			<input type="radio" name="type" id="changemode-driving">
+			<label for="changemode-driving">Driving</label>
+		</div>
+
 		<div id="map">
 		</div>
 	</body>
